maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:34: error: '=' expected but ';' found.
var num:Int=0
^JediEscaper:36: error: ';' expected but '=' found.
	(Xd,Yd)=getPos()
               ^JediEscaper:40: error: illegal start of simple expression
}
^